src/test/ui/trivial-bounds/trivial-bounds-leak-copy.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/trivial-bounds-leak-copy.rs:9:5
   |
LL |     *t
   |     ^^ cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
